[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aax-debug-env"
version = "1.0.0"
description = "Ask–Act–Explore: A cost-aware mobile debugging environment for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "anthropic>=0.25.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
]

[project.scripts]
aax-serve = "api:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*"]

[tool.setuptools.package-data]
"*" = ["data/*.json", "openenv.yaml"]
